# voms-config

./: CMakeLists.txt  README
config/vomses/: alice-lcg-voms.cern.ch  alice-voms.cern.ch  atlas-lcg-voms.cern.ch  atlas-vo.racf.bnl.gov  atlas-voms.cern.ch  cms-lcg-voms.cern.ch  cms-voms.cern.ch  envirogrids.vo.eu-egee.org-lcg-voms.cern.ch  envirogrids.vo.eu-egee.org-voms.cern.ch  geant4-lcg-voms.cern.ch  geant4-voms.cern.ch  ilc-voms.fnal.gov  lhcb-lcg-voms.cern.ch  lhcb-voms.cern.ch  na48-lcg-voms.cern.ch  na48-voms.cern.ch  ops-lcg-voms.cern.ch  ops-voms.cern.ch  unosat-lcg-voms.cern.ch  unosat-voms.cern.ch  vo.aleph.cern.ch-lcg-voms.cern.ch  vo.aleph.cern.ch-voms.cern.ch  vo.delphi.cern.ch-lcg-voms.cern.ch  vo.delphi.cern.ch-voms.cern.ch  vo.gear.cern.ch-lcg-voms.cern.ch  vo.gear.cern.ch-voms.cern.ch  vo.l3.cern.ch-lcg-voms.cern.ch  vo.l3.cern.ch-voms.cern.ch  vo.opal.cern.ch-lcg-voms.cern.ch  vo.opal.cern.ch-voms.cern.ch  vo.sixt.cern.ch-lcg-voms.cern.ch  vo.sixt.cern.ch-voms.cern.ch
packaging/rpm/specs/: voms-config-wlcg.spec
